--- a/index.html
+++ b/index.html
@@ -207,4 +207,4 @@ V    <BR>
             </tr>
             
             <tr bgcolor="black"align="center"><td colspan="3"><font color="#fff"><br>Copyright @ 2022 | ANKUR DUTTA</font></td></tr>
-        </table
+            </table>
